--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -1,56 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_margin="5dp"
-    android:elevation="2dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/background_white_rounded"
+    android:elevation="5dp"
     android:orientation="horizontal">
 
-    <androidx.cardview.widget.CardView
-        android:background="@android:color/white"
-        android:id="@+id/cvDoctorCard"
+    <RelativeLayout
+        android:id="@+id/rlItem"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="5dp">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:background="@android:color/white"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivProfilePicture"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_profile" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="5dp">
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_margin="10dp"
+            android:layout_toEndOf="@+id/ivProfilePicture"
+            android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/ivProfilePicture"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_margin="10dp"
-                android:src="@drawable/ic_profile" />
-
-            <LinearLayout
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvContactName"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_toEndOf="@+id/ivProfilePicture"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:text="Pedro Sanchez"
+                android:textSize="17sp" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tvContactName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Pedro Sanchez"
-                    android:textSize="17sp" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvEmail"
 
-                <com.google.android.material.textview.MaterialTextView
-					android:textColor="@color/colorPrimaryDark"
-                    android:id="@+id/tvEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="pedro@sanchez.dev"
-                    android:textSize="14sp" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp"
+                android:text="pedro@sanchez.dev"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="14sp" />
 
-            </LinearLayout>
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
