--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -1,54 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_marginEnd="10dp"
     android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     android:layout_marginBottom="10dp"
     android:background="@drawable/background_white_rounded"
     android:elevation="5dp"
+    android:id="@+id/rlItem"
     android:orientation="horizontal">
 
-    <RelativeLayout
-        android:id="@+id/rlItem"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivProfilePicture"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_profile" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_margin="10dp"
+        android:layout_toEndOf="@+id/ivProfilePicture"
+        android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/ivProfilePicture"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_profile" />
-
-        <LinearLayout
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvContactName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_margin="10dp"
-            android:layout_toEndOf="@+id/ivProfilePicture"
-            android:orientation="vertical">
+            android:layout_marginEnd="20dp"
+            android:text="Pedro Sanchez"
+            android:textSize="17sp" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tvContactName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:text="Pedro Sanchez"
-                android:textSize="17sp" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="20dp"
+            android:text="pedro@sanchez.dev"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="14sp" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tvEmail"
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="20dp"
-                android:text="pedro@sanchez.dev"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-    </RelativeLayout>
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
