--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,21 @@
     <style name="CustomTextViewStyle" parent="Widget.MaterialComponents.TextView">
         <item name="android:textColor">@color/colorPrimary</item>
     </style>
+
+    <style name="TitleOfItemContactDetailTextViewStyle" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="ValueOfItemContactDetailTextViewStyle" parent="Widget.MaterialComponents.TextView">
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+    <style name="BarStyle">
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_height">1.5dp</item>
+    </style>
 </resources>
