--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -22,6 +22,7 @@
 		android:layout_centerVertical="true"
 		android:layout_marginEnd="10dp"
 		android:layout_marginStart="10dp"
+		android:textStyle="bold"
 		android:gravity="center"
 		android:layout_toStartOf="@+id/ivEndLogo"
 		android:layout_toEndOf="@id/ivStartLogo"
@@ -30,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/main_activity_toolbar_title"
-        android:textSize="25sp" />
+        android:textSize="26sp" />
 
     <androidx.appcompat.widget.AppCompatImageView
 		android:layout_marginTop="10dp"
